@@ -42,12 +42,21 @@ rpm:	dist
 	mv $(HOME)/rpmbuild/SRPMS/rivendell-install-*.src.rpm $(top_srcdir)/
 	rm $(HOME)/rpmbuild/SOURCES/rivendell-install-$(VERSION).tar.gz
 
+web:	dist
+	mkdir -p $(HOME)/rpmbuild/SOURCES
+	cp rivendell-install-$(VERSION).tar.gz $(HOME)/rpmbuild/SOURCES/
+	$(RPMBUILD) -ba --target noarch-$(VENDOR)-linux rivendell-install-web.spec
+	mv $(HOME)/rpmbuild/RPMS/noarch/rivendell-install-*.rpm $(top_srcdir)/
+	mv $(HOME)/rpmbuild/SRPMS/rivendell-install-*.src.rpm $(top_srcdir)/
+	rm $(HOME)/rpmbuild/SOURCES/rivendell-install-$(VERSION).tar.gz
+
 EXTRA_DIST = autogen.sh\
              get_distro.pl\
              get_target.sh\
              PACKAGE_VERSION\
              rivendell-install-rhel6.spec.in\
-             rivendell-install-rhel7.spec.in
+             rivendell-install-rhel7.spec.in\
+             rivendell-install-web.spec.in
 
 CLEANFILES = *~\
              *.mo\
