@@ -1,0 +1,67 @@
+## rivendell-install-web.spec.in
+##
+##    Rivendell Installation Script Web Documentation
+##
+##    Copyright (C) 2016  Fred Gleason <fredg@paravelsystems.com>
+##
+##    This program is free software; you can redistribute it and/or modify
+##    it under the terms of version 2 of the GNU General Public License as
+##    published by the Free Software Foundation;
+##
+##    This program is distributed in the hope that it will be useful,
+##    but WITHOUT ANY WARRANTY; without even the implied warranty of
+##    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+##    GNU General Public License for more details.
+##
+##    You should have received a copy of the GNU General Public License
+##    along with this program; if not, write to the Free Software
+##    Foundation, Inc., 59 Temple Place, Suite 330, 
+##    Boston, MA  02111-1307  USA
+##
+
+Summary: Rivendell Installation Script Documentation
+Name: rivendell-install-web
+Version: @VERSION@
+Release: @RPM_RELEASE@%{?dist}
+License: GPL
+Packager: Fred Gleason <fredg@paravelsystems.com>
+Group: Productivity/Multimedia/Other
+Source: rivendell-install-@VERSION@.tar.gz
+BuildRoot: /var/tmp/rivendell-install-@VERSION@
+
+
+
+%description
+Web documentation for the Rivendell-install package.
+
+
+%prep
+
+
+%setup -q -n rivendell-install-%{version}
+
+
+%build
+%configure --libexecdir=@libexecdir@
+
+
+%install
+rm -rf $RPM_BUILD_ROOT
+mkdir -p $RPM_BUILD_ROOT@libexecdir@
+cp docs/*.html $RPM_BUILD_ROOT@libexecdir@/
+cp docs/*.pdf $RPM_BUILD_ROOT@libexecdir@/
+cp docs/*.png $RPM_BUILD_ROOT@libexecdir@/
+
+
+%clean
+rm -rf $RPM_BUILD_ROOT
+
+
+%files
+%defattr(-,root,root)
+@libexecdir@/*
+
+
+%changelog
+* @RPM_DATESTAMP@ Fred Gleason <fredg@paravelsystems.com> - @VERSION@-@RPM_RELEASE@
+-- Autogenerated from build tree.
